--- a/.github/workflows/coverity-scan.yml
+++ b/.github/workflows/coverity-scan.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Download Coverity Build Tool
         run: |
-          wget -q https://scan.coverity.com/download/cxx/linux64 --post-data "token=$TOKEN&project=radareorg%2Fr2ghidra-dec" -O cov-analysis-linux64.tar.gz
+          wget -q https://scan.coverity.com/download/cxx/linux64 --post-data "token=$TOKEN&project=radareorg%2Fr2ghidra" -O cov-analysis-linux64.tar.gz
           mkdir cov-analysis-linux64
           tar xzf cov-analysis-linux64.tar.gz --strip 1 -C cov-analysis-linux64
         env:
@@ -76,6 +76,6 @@ jobs:
             --form file=@r2ghidra.tgz \
             --form version=trunk \
             --form description="r2ghidra" \
-            https://scan.coverity.com/builds?project=radareorg%2Fr2ghidra-dec
+            https://scan.coverity.com/builds?project=radareorg%2Fr2ghidra
         env:
           TOKEN: ${{ secrets.COVERITY_SCAN_TOKEN }}
