Fix build, missing sleighpath

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+all: plugins
+
 include ../config.mk
 include ../ghidra/deps.mk
 
@@ -24,36 +26,37 @@ R2GHIDRA_OBJS=$(subst .cpp,.o,$(R2GHIDRA_SRCS))
 R2G_PLUGIN_OBJS=$(subst .cpp,.o,$(R2G_PLUG_SRCS))
 
 CXX=clang++
-CXXFLAGS+=-fPIC
-CXXFLAGS+=-std=c++11
-CXXFLAGS+=-I$(GHIDRA_DECOMPILER)
-CXXFLAGS+=-I.
+
+CFLAGS+=-fPIC
+CFLAGS+=-I$(GHIDRA_DECOMPILER)
+CFLAGS+=-I.
 ifeq (1,2)
 ## CXXFLAGS+=-DHOST_ENDIAN=1
-CXXFLAGS+=-Dint2=short
-CXXFLAGS+=-Duint2=unsigned" short"
-CXXFLAGS+=-Dint4=int
-CXXFLAGS+=-Duint4=unsigned" long long"
-CXXFLAGS+=-Dint8="long long"
-CXXFLAGS+=-Duint8="unsigned long long"
-CXXFLAGS+=-Duintm="unsigned long long"
+CFLAGS+=-Dint2=short
+CFLAGS+=-Duint2=unsigned" short"
+CFLAGS+=-Dint4=int
+CFLAGS+=-Duint4=unsigned" long long"
+CFLAGS+=-Dint8="long long"
+CFLAGS+=-Duint8="unsigned long long"
+CFLAGS+=-Duintm="unsigned long long"
 # needed for freebsd
 # ------------------
 # CXXFLAGS+=-Duintp=size_t
 # CXXFLAGS+=-Duint1="unsigned char"
 endif
+CXXFLAGS+=-std=c++11
+CXXFLAGS+=$(CFLAGS)
 
 
-EXT_SO=$(shell r2 -H R2_LIBEXT)
-R2G_CORE_PLUGIN=core_ghidra.so
-R2G_ASM_PLUGIN=asm_ghidra.so
-R2G_ANAL_PLUGIN=anal_ghidra.so
+R2_LIBEXT=$(shell r2 -H R2_LIBEXT)
+R2G_CORE_PLUGIN=core_ghidra.$(R2_LIBEXT)
+R2G_ASM_PLUGIN=asm_ghidra.$(R2_LIBEXT)
+R2G_ANAL_PLUGIN=anal_ghidra.$(R2_LIBEXT)
 
 
-all: plugins
 
 clean:
-	rm *.o $(GHIDRA_HOME)/*.o
+	rm -f *.o $(GHIDRA_HOME)/*.o
 
 plugins: $(R2G_CORE_PLUGIN) $(R2G_ASM_PLUGIN) $(R2G_ANAL_PLUGIN)
 
@@ -63,16 +66,16 @@ $(R2G_CORE_PLUGIN): deps
 	$(CXX) -shared $(R2_LDFLAGS) $(CXXFLAGS) -o $@ $(R2GHIDRA_OBJS) pugixml.o $(GHIDRA_OBJS) core_ghidra.o
 
 $(R2G_ASM_PLUGIN): deps
-	$(CXX) -shared $(R2_LDFLAGS) $(CXXFLAGS) -o $@ $(R2GHIDRA_OBJS) $(GHIDRA_OBJS) asm_ghidra.o
+	$(CXX) -shared $(R2_LDFLAGS) $(CXXFLAGS) -o $@ $(R2GHIDRA_OBJS) $(GHIDRA_OBJS) asm_ghidra.o pugixml.o
 
 $(R2G_ANAL_PLUGIN): deps
-	$(CXX) -shared $(R2_LDFLAGS) $(CXXFLAGS) -o $@ $(R2GHIDRA_OBJS) $(GHIDRA_OBJS) anal_ghidra.o
+	$(CXX) -shared $(R2_LDFLAGS) $(CXXFLAGS) -o $@ $(R2GHIDRA_OBJS) $(GHIDRA_OBJS) anal_ghidra.o pugixml.o
 
 %.o: %.cpp
 	$(CXX) -fPIC $(CXXFLAGS) $(R2_CFLAGS) -c $<
 
 install:
-	cp -f *.$(EXT_SO) $(R2_USER_PLUGINS)
+	cp -f *.$(R2_LIBEXT) $(R2_USER_PLUGINS)
 
 uninstall:
-	rm -f $(R2_USER_PLUGINS)/*ghidra*.$(EXT_SO)
+	rm -f $(R2_USER_PLUGINS)/*ghidra*.$(R2_LIBEXT)
