Use ghidra from radareorg's github

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "ghidra/ghidra"]
 	path = ghidra/ghidra
-	url = https://github.com/thestr4ng3r/ghidra.git
+	branch = r2ghidra
+	url = https://github.com/radareorg/ghidra.git
 [submodule "third-party/pugixml"]
 	path = third-party/pugixml
 	url = https://github.com/zeux/pugixml.git
