Fix another race condition in the makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@ PUGIXML_OBJS= $(PUGIXML_HOME)/pugixml.o
 #PUGIXML_OBJS= pugixml.o
 
 $(PUGIXML_OBJS): $(PUGIXML_SRCS)
-	$(CXX) -c $(R2_LDFLAGS) $(CXXFLAGS) -o $@ $(R2GHIDRA_OBJS) $(GHIDRA_OBJS) $<
+	$(CXX) -c $(R2_LDFLAGS) $(CXXFLAGS) -o $@ $<
 
 CXXFLAGS+=$(PUGIXML_CFLAGS)
 # CXXFLAGS+=-DR2GHIDRA_SLEIGHHOME_DEFAULT=\"$(GHIDRA_HOME)\"
