--- a/scripts/debian/CONFIG
+++ b/scripts/debian/CONFIG
@@ -2,6 +2,7 @@ PACKAGE=r2ghidra
 VERSION=$(shell r2 -qv)
 ARCH=amd64
 DEPENDS=radare2
+REPLACES=r2ghidra-dec
 SECTION=user/shell
 PRIORITY=optional
 MAINTAINER=pancake <pancake@nopcode.org>
