--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: ci
 
+env:
+  R2V: 5.1.0
+
 on: push
 
 jobs:
@@ -102,3 +105,37 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         path: radare2/dist/macos/*.pkg src/*.dylib /tmp/r2ghidra-macos.tar.gz
+  w64:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
+      with:
+        python-version: 3.7.x
+    - name: Preparing msvc toolchain
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+    - name: dependencies
+      shell: bash
+      run: |
+        pip install ninja meson wget
+        choco install winflexbison3
+        choco install zip
+        choco install cmake
+    - name: install r2
+      shell: bash
+      run: |
+        python -m wget https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-${R2V}_w64.zip -o r2.zip
+        unzip r2.zip
+        mv radare2-${R2V}_w64 radare2
+    - name: cmake
+      run: |
+        git submodule update --init ; mkdir build && cd build && cmake .. && make -j4 
+        make install DESTDIR=destdir
+        cd destdir
+        zip -r ../r2ghidra-w64.zip *
+    - uses: actions/upload-artifact@v2
+      with:
+        name: r2ghidra-${{env.R2V}}_w64.zip
+        path: r2ghidra-w64.zip
