--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,8 +140,8 @@ jobs:
         mkdir destdir
         mkdir build
         cd build
-        cmake --build .. --config Release
-        make -j3
+        cmake ..
+        cmake --build .
         # make install DESTDIR=%CD%\..\destdir
         cp *.dll ..\destdir
         cd ..\destdir
