--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,14 +128,13 @@ jobs:
         python -m wget https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-${R2V}_w64.zip -o r2.zip
         unzip r2.zip
         mv radare2-${R2V}_w64 radare2
+        pwd
     - name: make
       shell: cmd
       run: |
+        cd
         set PKG_CONFIG_PATH=%CD%\radare2\lib\pkgconfig
-        set CFLAGS=-I%CD%\radare2\include
-        set LDFLAGS=-L%CD%\radare2\lib
         set PATH=%CD%\radare2\bin;%PATH%
-        set DESTDIR=%CD%\destdir
         set ARCH=x64
         git submodule update --init
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
@@ -144,8 +143,7 @@ jobs:
         cd build
         cmake ..
         cmake --build .
-        # make install DESTDIR=%CD%\..\destdir
-        cp *.dll ..\destdir
+        copy *.dll ..\destdir
         cd ..\destdir
         zip -r ..\r2ghidra-w64.zip *
     - uses: actions/upload-artifact@v2
