adds updated github workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: ci
 
+env:
+  R2V: 5.1.0
+
 on: push
 
 jobs:
@@ -27,6 +30,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         # path: radare2/dist/debian/*/*.deb r2ghidra/scripts/debian/*.deb
+        name: r2ghidra-${{env.R2V}}_amd64.deb
         path: r2ghidra/scripts/debian/*.deb
 
   linux-asan:
@@ -102,3 +106,47 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         path: radare2/dist/macos/*.pkg src/*.dylib /tmp/r2ghidra-macos.tar.gz
+  w64:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
+      with:
+        python-version: 3.7.x
+    - name: Preparing msvc toolchain
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+    - name: dependencies
+      shell: bash
+      run: |
+        pip install ninja meson wget
+        choco install zip 
+    - name: install r2
+      shell: bash
+      run: |
+        python -m wget https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-${R2V}_w64.zip -o r2.zip
+        unzip r2.zip
+        mv radare2-${R2V}_w64 radare2
+        pwd
+    - name: make
+      shell: cmd
+      run: |
+        cd
+        set PKG_CONFIG_PATH=%CD%\radare2\lib\pkgconfig
+        set PATH=%CD%\radare2\bin;%PATH%
+        set ARCH=x64
+        git submodule update --init
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+        mkdir destdir
+        mkdir build
+        cd build
+        cmake -GNinja ..
+        cmake --build .
+        copy *.dll ..\destdir
+        cd ..\destdir
+        zip -r ..\r2ghidra-w64.zip *
+    - uses: actions/upload-artifact@v2
+      with:
+        name: r2ghidra-${{env.R2V}}_w64.zip
+        path: r2ghidra-w64.zip
