Revert "Fixes Visual Studio 19 compilation with Ninja"
This reverts commit 467b0aa06a27a6bd8a4028df7d5b6026200a3904.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,9 +56,7 @@ set(ASM_SOURCE
 		src/SleighAsm.cpp
 		src/SleighInstruction.h
 		src/SleighInstruction.cpp
-		src/asm_ghidra.cpp
-		src/ArchMap.h
-		src/ArchMap.cpp)
+		src/asm_ghidra.cpp)
 
 set(ANAL_SOURCE
 		src/SleighAsm.h
@@ -67,9 +65,7 @@ set(ANAL_SOURCE
 		src/SleighInstruction.cpp
 		src/SleighAnalValue.h
 		src/SleighAnalValue.cpp
-		src/anal_ghidra.cpp
-		src/ArchMap.h
-		src/ArchMap.cpp)
+		src/anal_ghidra.cpp)
 endif()
 
 find_package(Radare2 REQUIRED)
@@ -78,10 +74,6 @@ add_library(core_ghidra SHARED ${CORE_SOURCE})
 target_link_libraries(core_ghidra ghidra_decompiler_base ghidra_libdecomp ghidra_decompiler_sleigh)
 target_link_libraries(core_ghidra pugixml)
 target_link_libraries(core_ghidra Radare2::libr)
-if (WIN32)
-    target_link_libraries(core_ghidra Ws2_32.lib wininet)
-endif()
-
 set_target_properties(core_ghidra PROPERTIES
 		OUTPUT_NAME core_ghidra
 		PREFIX "")
