fixes win10build v2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,7 +141,7 @@ jobs:
         mkdir destdir
         mkdir build
         cd build
-        cmake ..
+        cmake -GNinja ..
         cmake --build .
         copy *.dll ..\destdir
         cd ..\destdir
