--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: ci
 
 env:
-  R2V: 5.1.0
+  R2V: 5.2.0
 
 on:
   push:
@@ -129,9 +129,10 @@ jobs:
     - name: install r2
       shell: bash
       run: |
-        python -m wget https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-${R2V}_w64.zip -o r2.zip
+        python -m wget https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-${R2V}-w64.zip -o r2.zip
         unzip r2.zip
-        mv radare2-${R2V}_w64 radare2
+        unzip radare2-git.zip
+        mv radare2-install radare2
         pwd
     - name: make
       shell: cmd
@@ -152,5 +153,5 @@ jobs:
         zip -r ..\r2ghidra-w64.zip *
     - uses: actions/upload-artifact@v2
       with:
-        name: r2ghidra-${{env.R2V}}_w64.zip
+        name: r2ghidra-${{env.R2V}}-w64.zip
         path: r2ghidra-w64.zip
