--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,8 +131,7 @@ jobs:
       run: |
         python -m wget https://github.com/radareorg/radare2/releases/download/${R2V}/radare2-${R2V}-w64.zip -o r2.zip
         unzip r2.zip
-        unzip radare2-git.zip
-        mv radare2-install radare2
+        mv radare2-${R2V}-w64 radare2
         pwd
     - name: make
       shell: cmd
